fix for overflow styling

--- a/app/src/components/body/body-vertical/BodyVertical.scss
+++ b/app/src/components/body/body-vertical/BodyVertical.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   padding: 0.5rem 0;
   width: 100%;
+  overflow: hidden auto;
 
   &.grid {
     flex-direction: row;
