--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,7 @@
 body {
   display: block;
   padding: 1rem;
+  overflow: hidden;
 }
 
 body * {
